--- a/.github/workflows/azure_deploy.yml
+++ b/.github/workflows/azure_deploy.yml
@@ -23,10 +23,10 @@ jobs:
         dotnet-version: '6.0.x'
 
     - name: Build with dotnet
-      run: dotnet build  .\ClippyMAUI\ExistingBlazorSite\Server\ExistingBlazorSite.Server.csproj --configuration Release
+      run: dotnet build  .\ExistingBlazorSite\Server\ExistingBlazorSite.Server.csproj --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish .\ClippyMAUI\ExistingBlazorSite\Server\ExistingBlazorSite.Server.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: dotnet publish .\ExistingBlazorSite\Server\ExistingBlazorSite.Server.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
